2010-07-28  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Move hostname to the end in all ssh
	`tramp-login-args'.
	(tramp-verbose): Describe verbose level 9.
	(tramp-open-shell): Check for tty if `tramp-verbose' >= 9.
	(tramp-open-connection-setup-interactive-shell): Trace stty
	settings if `tramp-verbose' >= 9.
	(tramp-handle-start-file-process): Implement tty setting.
	(Bug#4604, Bug#6360)

	* tramp-cmds.el (tramp-bug): Recommend setting of `tramp-verbose'
	to 9.

2010-07-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-methods): Move hostname to the end in all plink
	`tramp-login-args'.
	(tramp-file-name-regexp-unified)
	(tramp-completion-file-name-regexp-unified): On W32 systems, do
	not regard the volume letter as remote filename.  (Bug#5447)
	(tramp-open-shell): New defun.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Use it.

2010-07-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-ls-command)
	(tramp-get-ls-command-with-dired): Run tests on "/dev/null"
	instead of "/".

2010-07-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-file-name-handler): Trace 'quit.
	(tramp-open-connection-setup-interactive-shell): Apply
	workaround for IRIX64 bug.  Move argument of last
	`tramp-send-command' where it belongs to.

2010-07-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-perl-file-attributes)
	(tramp-perl-directory-files-and-attributes): Don't pass "$3".
	(tramp-maybe-open-connection): Use `async-args' and `gw-args' in
	front of `login-args'.

2010-07-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-get-ls-command-with-dired): Make test for
	"--dired" stronger.

2010-07-16  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-shell-command): Don't use hard-wired
	"/bin/sh" but `tramp-remote-sh' from `tramp-methods'.
	(tramp-find-shell): Simplify setting connection property.